Save avatars localy and change styles

--- a/client/main.html
+++ b/client/main.html
@@ -165,5 +165,5 @@
   </template>
 
   <template name="guest">
-  	<li><img src="{{picture}}"> {{name}} <small><a href="#">edit</a></small></li>
+  	<li><img src="avatars/{{picture}}"> {{name}} <small><a href="#">edit</a></small></li>
   </template>
