Make function to add new event

--- a/client/main.html
+++ b/client/main.html
@@ -45,7 +45,7 @@
 	        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 	        <h4 class="modal-title" id="myModalLabel">Crete a new Event</h4>
 	      </div>
-	        <form>
+	        <form class="create-event">
 		      <div class="modal-body">
 				  <div class="form-group">
 				    <label for="inputEventName">Name</label>
