Fix syntax for categories

--- a/client/main.html
+++ b/client/main.html
@@ -86,9 +86,9 @@
 				  <div class="form-group">
  					<label for="inputGuestStatus">Status</label>
 				    <select class="form-control" id="inputGuestStatus">
-					  <option value="attening">Attening</option>
+					  <option value="attending">Attending</option>
 					  <option value="maybe">Maybe</option>
-					  <option value="not attening">Not attening</option>
+					  <option value="not attenging">Not attenging</option>
 					</select>
 				  </div>
 		      </div>
