again fix attending

--- a/client/main.html
+++ b/client/main.html
@@ -88,7 +88,7 @@
 				    <select class="form-control" id="inputGuestStatus">
 					  <option value="attending">Attending</option>
 					  <option value="maybe">Maybe</option>
-					  <option value="not attenging">Not attenging</option>
+					  <option value="not attending">Not attending</option>
 					</select>
 				  </div>
 		      </div>
