--- a/client/main.html
+++ b/client/main.html
@@ -43,7 +43,11 @@
 	    <div class="modal-content">
 	      <div class="modal-header">
 	        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-	        <h4 class="modal-title" id="myModalLabel">Crete a new Event</h4>
+	        {{#if editing_event_key}}
+	        	<h4 class="modal-title" id="myModalLabel">Edit an Event</h4>
+	        {{else}}
+	        	<h4 class="modal-title" id="myModalLabel">Crete a new Event</h4>
+	        {{/if}}
 	      </div>
 	        <form class="create-event">
 		      <div class="modal-body">
@@ -58,7 +62,11 @@
 		      </div>
 		      <div class="modal-footer">
 		        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-		        <button class="btn btn-success" type="submit">Create</button>
+		        {{#if editing_event_key}}
+		        	<button class="btn btn-success" type="submit">Save changes</button>
+		        {{else}}
+		        	<button class="btn btn-success" type="submit">Create</button>
+		        {{/if}}
 		      </div>
 		   </form>
 	    </div>
@@ -118,7 +126,7 @@
   				<h3>{{name}} <small>{{displayDate date}}</small></h3>
   			</div>
   			<div class="col-sm-2">
-  				<button class="btn btn-link edit-link">Edit event</button>
+  				<button class="btn btn-link edit-link" data-toggle="modal" data-target="#createEvent">Edit event</button>
   			</div>
   			<div class="col-sm-3">
   				<button class="btn btn-primary btn-sm add-guest" data-toggle="modal" data-target="#addGuest">Add a new Guest</button>
