--- a/client/main.html
+++ b/client/main.html
@@ -88,7 +88,7 @@
 	    <div class="modal-content">
 	      <div class="modal-header">
 	        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-	        {{#if editing_key}}
+	        {{#if manage_guest}}
 	        	<h4 class="modal-title" id="myModalLabel">Edit a Guest</h4>
 	        {{else}}
 	        	<h4 class="modal-title" id="myModalLabel">Add a new Guest</h4>
@@ -98,7 +98,11 @@
 		      <div class="modal-body">
 				  <div class="form-group">
 				    <label for="inputGuestName">Name</label>
-				    <input type="text" class="form-control" id="inputGuestName" placeholder="Enter a guest name">
+				    {{#if manage_guest}}
+						<input type="text" class="form-control" id="inputGuestName" placeholder="Enter a guest name" value="{{getName}}" disabled="disabled">
+				    {{else}}
+				    	<input type="text" class="form-control" id="inputGuestName" placeholder="Enter a guest name">
+				    {{/if}}
 				  </div>
 				  <div class="form-group">
 				    <label for="inputGuestPicture">Picture</label>
@@ -116,13 +120,13 @@
 		      <div class="modal-footer">
 		      	<div class="row">
 		      		<div class="col-sm-6 left-side">
-		      			{{#if editing_key}}
+		      			{{#if manage_guest}}
 				        	<button class="btn btn-danger delete-guest" type="submit">Delete</button>
 				        {{/if}}
 		      		</div>
 		      		<div class="col-sm-6 right-side">
 		      			<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-		      			{{#if editing_key}}
+		      			{{#if manage_guest}}
 				      		<button class="btn btn-success" type="submit">Save changes</button>
 				        {{else}}
 				        	<button class="btn btn-success" type="submit">Add</button>
